--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,12 @@
 {
   "name": "Tigerhub Redirector",
   "version": "0.1",
-  "description": "Takes you to Tigerhub -- after you've logged in but before Tigerhub has realized it.",
+  "description": "For Princeton students. Takes you to Tigerhub -- after you've logged in but before Tigerhub has realized it.",
+  "icons": {
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  },
   "background": { 
     "page":"bg.html"
   },
